# OmniMCP

./: .env.example  .gitignore  CLAUDE.md  README.md  cli.py  demo.py  demo_synthetic.py  input.py  install.bat  install.sh  make_gif.py  make_gif.sh  omnimcp.py  pyproject.toml  run_omnimcp.py  test_deploy_and_parse.py  test_parseImage_local.py  types.py
.github/workflows/: ci.yml
docs/: testing_strategy.md
omnimcp/: __init__.py  agent_executor.py  completions.py  config.py  core.py  input.py  mcp_server.py  omnimcp.py  synthetic_ui.py  testing_utils.py  tracking.py  types.py  utils.py  visual_state.py
omnimcp/omniparser/: Dockerfile  client.py  mapper.py  server.py
omnimcp/tests/: conftest.py  test_omnimcp.py  test_omniparser_e2e.py  test_synthetic_ui.py
omniparser/: client.py
paper/: omnimcp_arxiv.tex  omnimcp_whitepaper.tex
tests/: CI_TESTING_OPTIONS.md  conftest.py  test_agent_executor.py  test_core.py  test_deploy_and_parse.py  test_mapper.py  test_omnimcp.py  test_omnimcp_core.py  test_omniparser_e2e.py  test_parse_image_integration.py  test_synthetic_ui.py  test_tracking.py  test_visual_state.py
